--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -814,19 +814,6 @@
 		margin-bottom: 2em;
 	}
 
-	#font-grad {
-		color:#fff;
-		font-size: 24px;
-	}
-
-	.navbar-default {
-		background: transparent;
-		border-color: transparent;
-	}
-
-	#me-two {
-		
-	}
 /* Table */
 
 	table {
@@ -1073,7 +1060,7 @@
 		position: relative;
 		display: inline-block;
 		color: #ffffff;
-		width: 1em;
+		width: 150px;
 		height: 1em;
 		line-height: 0.9em;
 	}
@@ -1254,9 +1241,9 @@
 			}
 
 				#nav a {
-					font-size: 2.5em;
+					font-size: 20px;
 					margin: 0 0.25em 0 0.25em;
-					opacity: 0.35;
+					opacity: 0.85;
 					outline: 0;
 					-moz-transition: opacity .25s ease-in-out;
 					-webkit-transition: opacity .25s ease-in-out;
@@ -1339,13 +1326,6 @@
 				box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.25);
 			}
 
-			#maintwo {
-				width: 45em;
-				margin-top: 20px;
-				position: relative;
-				background: #ffffff;
-				box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.25);
-			}
 
 			.panel {
 				padding: 0em 2.5em 3.5em 2.5em;
