--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -25,6 +25,7 @@
     text-align: center;
 }
 
+
 .leftalign {
     text-align: left;
     margin-bottom: 15px;
@@ -36,42 +37,42 @@
 
 #iconleftalign2{
     position: relative;
-    left: 130px;
+    left: 100px;
 }
 
 #iconrightalign2 {
     position: relative;
-    right: 130px;
+    right: 100px;
 }
 
 #iconleftalign3{
     position: relative;
-    left: 70px;
+    left: 30px;
 }
 
 #iconrightalign3 {
     position: relative;
-    right: 70px;
+    right: 30px;
 }
 
 #iconleftalign4{
     position: relative;
-    left: 10px;
+    left: -30px;
 }
 
 #iconrightalign4 {
     position: relative;
-    right: 10px;
+    right: -30px;
 }
 
 #iconleftalign {
     position: relative;
-    left: 180px;
+    left: 160px;
 }
 
 #iconrightalign {
     position: relative;
-    right: 180px;
+    right: 160px;
 
 }
 
@@ -82,18 +83,30 @@
 .p2:before {
     content: "";
     display: inline-block;
-  width: 0; 
-  height: 0; 
-  margin-right: 10px;
-  border-top: 7px solid transparent;
-  border-bottom: 7px solid transparent;   
-  border-right:7px solid #999; 
+    width: 0; 
+    height: 0; 
+    margin-right: 10px;
+    border-top: 7px solid transparent;
+    border-bottom: 7px solid transparent;   
+    border-right:7px solid #999; 
 }
 
 .margin-right {
     margin-right: 30px;
 }
 
+.spin {
+    transform-origin: 50% 58%;
+}
+
+.devicon-git-plain {
+    max-width: 35px;
+}
+
+li {
+    display: inline-block;
+
+}
 /*#nav a {
     width: 100px;
     font-size:20px;
