added new profile pic

--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -114,6 +114,11 @@ li {
     height: 100%;
 }
 
+#profile {
+    width: 200px;
+    height: 200px;
+}
+
 .card {
     background-color: #fff;
     padding: 10px;
