--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -8,7 +8,7 @@
 	border-color: transparent;
 }
 #maintwo {
-	width: 45em;
+	width: 100%;
 	margin-top: 20px;
     height: 100%;
 	position: relative;
@@ -141,4 +141,49 @@ li {
 	.container {
     	width: 800px;
 	}
+}
+
+@media (max-width: 1074px){
+    .navbar-default{
+        display: none;
+    }
+
+}
+@media (max-width: 736px) {
+    #me .pic {
+        width: 50%;
+}
+}
+.navbar-header {
+    background-color: transparent;
+    width:100%;
+}
+
+.navbar-inverse {
+    background-color: transparent;
+    border-color: transparent;
+}
+
+.navbar-inverse .navbar-nav>li>a {
+    color: #fff;
+}
+.navbar-inverse .navbar-toggle {
+    border-color: 1px solid #fff;
+}
+
+.navbar-toggle.collapsed {
+    background-color:transparent;
+    border-color: transparent;
+}
+
+.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+    border-color: transparent;
+}
+@media (min-width: 1064px){
+    .navbar-inverse {
+        display: none;
+    }
+    .navbar-header {
+        display: none;
+    }
 }
