--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -22,6 +22,14 @@
     margin-bottom: 10px;
 }
 
+
+.roundimg {
+    border-radius: 170px;
+    width: 230px;
+    height: 230px;
+    margin-bottom: 10px;
+    margin-right: 30px;
+}
 .center {
     text-align: center;
 }
@@ -78,7 +86,8 @@
 }
 
 .devicon-git-plain {
-  max-width: 6em;
+  max-width: 8em;
+  padding: 2px;
 }
 
 .p2:before {
@@ -136,24 +145,7 @@ li {
     width: 100px;
     font-size:20px;
 }*/
-/*Media Queries*/
-@media (min-width: 1200px) {
-	.container {
-    	width: 800px;
-	}
-}
 
-@media (max-width: 1074px){
-    .navbar-default{
-        display: none;
-    }
-
-}
-@media (max-width: 736px) {
-    #me .pic {
-        width: 50%;
-}
-}
 .navbar-header {
     background-color: transparent;
     width:100%;
@@ -179,11 +171,63 @@ li {
 .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
     border-color: transparent;
 }
-@media (min-width: 1064px){
+
+.jumbotron {
+    background-image: url("../../images/197.jpg");
+    background-color: #fff;
+    width: 100%;
+    height: 400px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    /* background-position-y: -230px; */
+    padding-top: 5px;
+}
+
+.right {
+    text-align: right;
+}
+
+
+.jumbotron h1{
+    color: #fff;
+    padding-top: 5%;
+}
+
+.jumbotron h2 {
+    color: #fff;
+}
+
+/* .marginbottom {
+    padding-bottom: 500px;
+} */
+
+/*Media Queries*/
+
+@media (min-width: 1200px) {
+	.container {
+    	width: 800px;
+	}
+}
+
+@media (max-width: 1074px){
+    .navbar-default{
+        display: none;
+    }
+
+}
+@media (max-width: 736px) {
+    #me .pic {
+        width: 50%;
+    }
+}
+
+@media (min-width: 718px){
     .navbar-inverse {
         display: none;
     }
     .navbar-header {
         display: none;
     }
+
 }
