added random quote API

--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -176,7 +176,7 @@ li {
     background-image: url("../../images/197.jpg");
     background-color: #fff;
     width: 100%;
-    height: 400px;
+    height: 100%;
     background-size: 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
