--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -204,6 +204,9 @@ li {
     background-size: 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    padding-top: 0px;
+    padding-bottom: 0;
+    margin-bottom: 0;
     /* background-position-y: -230px; */
     /* padding-top: 5px; */
 }
@@ -226,6 +229,7 @@ li {
     width: 420px;
     height: 210px;
 }
+
 /* .marginbottom {
     padding-bottom: 500px;
 } */
@@ -248,6 +252,13 @@ li {
     #me .pic {
         width: 50%;
     }
+    #nav {
+        margin-bottom: 0;
+        margin-top: 0;
+    }
+    .row > * {
+    float: none;
+}
 }
 
 @media screen and (min-width: 966px) and (max-width: 2000px){
