--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -32,7 +32,6 @@ body {
     border-radius: 100px;
     width: 160px;
     height: 160px;
-    margin-bottom: 10px;
 }
 
 
@@ -207,7 +206,7 @@ li {
     background-repeat: no-repeat;
     background-attachment: fixed;
     padding-top: 0px;
-    padding-bottom: 0;
+    padding-bottom: 20px;
     margin-bottom: 0;
     /* background-position-y: -230px; */
     /* padding-top: 5px; */
@@ -272,7 +271,13 @@ li {
     }
     .row > * {
     float: none;
-}
+    }
+    .roundimg {
+        border-radius: 100px;
+        width: 110px;
+        height: 110px;
+    }
+    
 }
 
 @media screen and (min-width: 966px) and (max-width: 2000px){
