--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -1,3 +1,6 @@
+:root {
+    --background: #1b100e;
+}
 body {
     padding-top: 30px;
 }
@@ -20,7 +23,7 @@ body {
 }
 
 #mainthree {
-    background-color: #1B100E;
+    background: var(--background);
     width: 100%;
     height: 100%;
 }
@@ -164,7 +167,7 @@ li {
 }*/
 
 .navbar-header {
-    background-color: #1B100E;
+    background: var(--background);
     color: #1B100E;
     width:100%;
 }
@@ -194,7 +197,7 @@ li {
 }
 
 .navbar-default {
-    background-color: #1B100E;
+    background: var(--background);
 }
 
 .jumbotron {
@@ -205,7 +208,7 @@ li {
     background-size: 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    padding-top: 0px;
+    margin-top: 20px;
     padding-bottom: 20px;
     margin-bottom: 0;
     /* background-position-y: -230px; */
